<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_payment_types_title"
        android:key="@string/pref_payment_types_key">
    <CheckBoxPreference
        android:title="@string/pref_enable_hot_water_label"
        android:key="@string/pref_enable_hot_water_key"
        android:summaryOff="@string/pref_enable_hot_water_false"
        android:summaryOn="@string/pref_enable_hot_water_true"
        android:defaultValue="@string/pref_enable_hot_water_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_cold_water_label"
        android:key="@string/pref_enable_cold_water_key"
        android:summaryOff="@string/pref_enable_cold_water_false"
        android:summaryOn="@string/pref_enable_cold_water_true"
        android:defaultValue="@string/pref_enable_cold_water_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_canalization_label"
        android:key="@string/pref_enable_canalization_key"
        android:summaryOff="@string/pref_enable_canalization_false"
        android:summaryOn="@string/pref_enable_canalization_true"
        android:defaultValue="@string/pref_enable_canalization_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_electricity_label"
        android:key="@string/pref_enable_electricity_key"
        android:summaryOff="@string/pref_enable_electricity_false"
        android:summaryOn="@string/pref_enable_electricity_true"
        android:defaultValue="@string/pref_enable_electricity_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_internet_label"
        android:key="@string/pref_enable_internet_key"
        android:summaryOff="@string/pref_enable_internet_false"
        android:summaryOn="@string/pref_enable_internet_true"
        android:defaultValue="@string/pref_enable_internet_default" />

    </PreferenceCategory>


    </PreferenceScreen>