<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/bill_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView style="@style/detailCardView">

                <LinearLayout
                    android:id="@+id/hot_water_group"
                    style="@style/detailCardLayout">

                    <TextView
                        style="@style/detailCardTitle"
                        android:text="@string/hot_water" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tax" />

                            <EditText
                                android:id="@+id/hot_water_tax"
                                style="@style/detailEditText" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value" />

                            <EditText
                                android:id="@+id/hot_water_value"
                                style="@style/detailEditText" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sum" />

                            <TextView
                                android:id="@+id/hot_water_sum"
                                style="@style/detailSumView" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/detailCardView">

                <LinearLayout
                    android:id="@+id/cold_water_group"
                    style="@style/detailCardLayout">

                    <TextView
                        android:text="@string/cold_water"
                        style="@style/detailCardTitle" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tax" />

                            <EditText
                                android:id="@+id/cold_water_tax"
                                style="@style/detailEditText"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value" />

                            <EditText
                                android:id="@+id/cold_water_value"
                                style="@style/detailEditText" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sum" />

                            <TextView
                                android:id="@+id/cold_water_sum"
                                style="@style/detailSumView" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/detailCardView">

                <LinearLayout
                    android:id="@+id/canalization_group"
                    style="@style/detailCardLayout">

                    <TextView
                        android:text="@string/canalization"
                        style="@style/detailCardTitle" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tax" />

                            <EditText
                                android:id="@+id/canalization_tax"
                                style="@style/detailEditText"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value" />

                            <TextView
                                android:id="@+id/canalization_value"
                                style="@style/detailSumView" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sum" />

                            <TextView
                                android:id="@+id/canalization_sum"
                                style="@style/detailSumView" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/detailCardView">

                <LinearLayout
                    android:id="@+id/electricity_group"
                    style="@style/detailCardLayout">

                    <TextView
                        android:id="@+id/textView"
                        android:text="@string/electricity"
                        style="@style/detailCardTitle" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tax" />

                            <EditText
                                android:id="@+id/electricity_tax"
                                style="@style/detailEditText" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value" />

                            <EditText
                                android:id="@+id/electricity_value"
                                style="@style/detailEditText"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sum" />

                            <TextView
                                android:id="@+id/electricity_sum"
                                style="@style/detailSumView" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalSum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end" />

    </LinearLayout>

</LinearLayout>