<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.epipasha.kvartplata.data.Conv"/>
        <variable
            name="model"
            type="com.epipasha.kvartplata.fragments.PaymentViewModel"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.ColdWaterFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPrevValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTitle">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/previous_value"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.convertIntToString(model.coldWater.pastValue)}"
                    tools:text="1000" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPresValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/etPrevValue"
                app:layout_constraintTop_toBottomOf="@+id/etPrevValue">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/present_value"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.convertIntToString(model.coldWater.presentValue)}"
                    tools:text="1500" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/etPresValue"
                app:layout_constraintTop_toBottomOf="@+id/etPresValue">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tax"
                    android:inputType="numberDecimal"
                    android:text="@={Conv.convertIntToString(model.coldWater.tax)}"
                    tools:text="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvDelta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@{Conv.convertIntToString(model.coldWater.delta)}"
                app:layout_constraintBottom_toBottomOf="@+id/etPresValue"
                app:layout_constraintStart_toEndOf="@+id/etPresValue"
                app:layout_constraintTop_toTopOf="@+id/etPresValue"
                tools:text="500" />

            <TextView
                android:id="@+id/tvSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@{Conv.convertIntToString(model.coldWater.sum)}"
                app:layout_constraintBottom_toBottomOf="@+id/etTax"
                app:layout_constraintStart_toEndOf="@+id/etTax"
                app:layout_constraintTop_toTopOf="@+id/etTax"
                tools:text="10000" />

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cold_water"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>